--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,19 @@
     </exclusions>
 </dependency>
 <dependency>
+    <groupId>org.springframework.restdocs</groupId>
+    <artifactId>spring-restdocs-asciidoctor</artifactId>
+    <scope>test</scope>
+</dependency>
+
+<dependency>
     <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-engine</artifactId>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.springframework.restdocs</groupId>
+    <artifactId>spring-restdocs-core</artifactId>
     <scope>test</scope>
 </dependency>
 <dependency>
@@ -116,6 +127,27 @@
                 </annotationProcessorPaths>
             </configuration>
         </plugin>
+		<plugin>
+    <groupId>org.asciidoctor</groupId>
+    <artifactId>asciidoctor-maven-plugin</artifactId>
+    <version>2.4.0</version>
+    <executions>
+        <execution>
+            <id>generate-docs</id>
+            <phase>test</phase>
+            <goals>
+                <goal>process-asciidoc</goal>
+            </goals>
+            <configuration>
+                <sourceDirectory>${project.basedir}/src/test/asciidoc</sourceDirectory>
+                <outputDirectory>${project.build.directory}/generated-docs</outputDirectory>
+                <attributes>
+                    <snippets>${project.build.directory}/generated-snippets</snippets>
+                </attributes>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
